// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check page main nav section against snapshot 1`] = `
<Component
  type="nav"
>
  <section
    className="pf-c-page__main-nav"
  />
</Component>
`;

exports[`Check page section with fill and no padding example against snapshot 1`] = `
<Component
  isFilled={true}
  noPadding={true}
>
  <section
    className="pf-c-page__main-section pf-m-no-padding pf-m-fill"
  />
</Component>
`;

exports[`Check page section with fill example against snapshot 1`] = `
<Component
  isFilled={true}
>
  <section
    className="pf-c-page__main-section pf-m-fill"
  />
</Component>
`;

exports[`Check page section with no fill example against snapshot 1`] = `
<Component
  isFilled={false}
>
  <section
    className="pf-c-page__main-section pf-m-no-fill"
  />
</Component>
`;

exports[`Check page section with no padding example against snapshot 1`] = `
<Component
  noPadding={true}
>
  <section
    className="pf-c-page__main-section pf-m-no-padding"
  />
</Component>
`;

exports[`Check page section with no padding on mobile example against snapshot 1`] = `
<Component
  noPaddingMobile={true}
>
  <section
    className="pf-c-page__main-section pf-m-no-padding-mobile"
  />
</Component>
`;
